amco change footer, change all yellow to white

--- a/amco2022noartist/index.html
+++ b/amco2022noartist/index.html
@@ -7,7 +7,7 @@
         <link rel="shortcut icon" href="img/favicon.ico">
         <title>AMCO</title>
         <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-        <link rel="stylesheet" href="css/stylev2.css" type="text/css" />
+        <link rel="stylesheet" href="css/stylev2.css?v=2" type="text/css" />
     </head>
 
     <body id="headfix" class="showintro pre-load" ontouchstart>
@@ -156,8 +156,8 @@
                         <a href="https://open.spotify.com/playlist/3P5lvPs2CElZ4VLo6g3d5K?si=6a5dba9cd154415d" class="icon" id="spotify">&nbsp;</a>
 						<a href="https://www.nts.live/shows/an-atlanta-company-presents-it-s-up" class="icon" id="nts">&nbsp;</a>
                     </div>
-                    <div class="fttex mt-2">AMCO IS A DISTRIBUTION, PUBLISHING AND MANAGEMENT COMPANY IN PARTNERSHIP WITH OPPOSITION/BROADBANDTV CORPORATION. FOUNDED BY THE TEAM BEHIND RENOWNED INDEPENDENT MUSIC COLLECTIVE, AWFUL RECORDS.</div>
-                     <div class="fttex2 mt-3">© 2021 ATLANTA MUSIC COMPANY LLC</div>
+					<div class="fttex mt-2">AMCO IS A DISTRIBUTION, PUBLISHING AND MANAGEMENT COMPANY IN PARTNERSHIP WITH OPPOSITION/BROADBANDTV CORPORATION AND BECAUSE MUSIC GROUP. <br>FOUNDED BY THE TEAM BEHIND RENOWNED INDEPENDENT MUSIC COLLECTIVE, AWFUL RECORDS.</div>
+					<div class="fttex2 mt-3">© 2022 ATLANTA MUSIC COMPANY LLC</div>
                 </div>
             </div>
         </div>
