--- a/amco/index.html
+++ b/amco/index.html
@@ -155,8 +155,8 @@
                         <a href="https://open.spotify.com/playlist/3P5lvPs2CElZ4VLo6g3d5K?si=6a5dba9cd154415d" class="icon" id="spotify">&nbsp;</a>
 						<a href="https://www.nts.live/shows/an-atlanta-company-presents-it-s-up" class="icon" id="nts">&nbsp;</a>
                     </div>
-                    <div class="fttex mt-2">AMCO IS A DISTRIBUTION, PUBLISHING AND MANAGEMENT COMPANY IN PARTNERSHIP WITH OPPOSITION/BROADBANDTV CORPORATION. FOUNDED BY THE TEAM BEHIND RENOWNED INDEPENDENT MUSIC COLLECTIVE, AWFUL RECORDS.</div>
-                     <div class="fttex2 mt-3">© 2021 ATLANTA MUSIC COMPANY LLC</div>
+                    <div class="fttex mt-2">AMCO IS A DISTRIBUTION, PUBLISHING AND MANAGEMENT COMPANY IN PARTNERSHIP WITH OPPOSITION/BROADBANDTV CORPORATION AND BECAUSE MUSIC GROUP. <br>FOUNDED BY THE TEAM BEHIND RENOWNED INDEPENDENT MUSIC COLLECTIVE, AWFUL RECORDS.</div>
+                    <div class="fttex2 mt-3">© 2022 ATLANTA MUSIC COMPANY LLC</div>
                 </div>
             </div>
         </div>
