amco change about to white text on black bg

--- a/amco/index.html
+++ b/amco/index.html
@@ -74,7 +74,7 @@
                         FOR ARTISTS<br>WITH GREAT MUSIC<br>AND A STORY TO TELL.
                     </div> -->
 					<div class="about-logo">
-						<img src="img/logo_black.png" alt="AMCO">
+						<img src="img/logo.png" alt="AMCO">
 					</div>
                     <div class="about-desc">
 						<p>Storytelling and good music epitomize the vision of AMCO. We are a distribution, publishing and management company committed to working with artists who captivate and stay true to their respective imagination.</p>
