--- a/MACSITE/work.html
+++ b/MACSITE/work.html
@@ -20,8 +20,9 @@
 	<!-- <div class="crt desktop"> -->
 	<div class="desktop">
 		<div class="desktop-icons">
-			<div class="icon disk" data-window="system-window" data-is-open=true><span class="icon-label">System 1.0 disk</span></div>
+			<div class="icon disk" data-window="system-window" data-is-open=true><span class="icon-label">test</span></div>
 			<div class="icon disk" data-window="cartivoice" data-is-open=false><span class="icon-label">cartivoice</span></div>
+			<div class="icon disk" data-window="amco" data-is-open=false><span class="icon-label">AMCO</span></div>
 		</div>
 		<div class="window" id="system-window" data-is-open=true>
 			<div class="title-bar">
@@ -45,9 +46,24 @@
 			<div class="window__pane">
 				<img src="img/logos/cartivoice.png" class="logo-img" alt="cartivoice">
 				<br> =======================
-				<br> <strong>Role</strong>: Concept, design, coding
+				<p><strong>Role</strong>: Concept, design, coding
 				<p>carti voice is a meme generator that takes user-input text and translates it into the unique typing style of rapper Playboi Carti.
 				<p>I came up with the idea one day in March of 2019, and four days later, <a href="https://twitter.com/LScorrcho/status/1107341327182651394" data-type="URL" data-id="https://twitter.com/LScorrcho/status/1107341327182651394">the site was live.</a> It went viral immediately after release, with thousands of Carti fans using the site to create tweets and Instagram captions. The site still receives thousands of page views weekly.
+			</div>
+		</div>
+
+		<div class="window" id="amco" data-is-open=false>
+			<div class="title-bar">
+				<button class="close"><span class="hidden">Close</span></button>
+				<h1 class="title">AMCO</h1>
+				<button class="resize"><span class="hidden">Resize</span></button>
+			</div>
+			<div class="details-bar"><span>2021</span><span></span><span><a href="https://amcosounds.com">amcosounds.com</a></span></div>
+			<div class="window__pane">
+				<img src="img/logos/amco.png" class="logo-img" alt="AMCO">
+				<br>=======================
+				<p><strong>Role</strong>: Coding
+				<p>AMCO is a distribution, publishing and management company founded by the team behind the renowned independent music collective Awful Records, known for artists such as Father, Playboi Carti, Zack Fox, and Faye Webster, amongst others.
 			</div>
 		</div>
 	</div>
