--- a/MACSITE/work.html
+++ b/MACSITE/work.html
@@ -30,7 +30,7 @@
 				<h1 class="title">Work</h1>
 				<button class="resize"><span class="hidden">Resize</span></button>
 			</div>
-			<div class="details-bar"><span>2019</span><span></span><span><a href="https://thisshowrules.com">linktosite.com</a></span></div>
+			<div class="details-bar"><span>2019</span><span></span><span><a href="index.html">linktosite.com</a></span></div>
 			<div class="window__pane">
 				work work work work work work
 			</div>
