it's better on mobile now :)

--- a/MACSITE_nondynamic/work.html
+++ b/MACSITE_nondynamic/work.html
@@ -2,7 +2,6 @@
 <html lang="en" >
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>lance encarnado</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 	<link rel="stylesheet" href="css/style.css">
@@ -44,7 +43,7 @@
 				<h1 class="title">cartivoice</h1>
 				<button class="resize"><span class="hidden">Resize</span></button>
 			</div>
-			<div class="details-bar"><span>2019</span><span></span><span><a href="https://cartivoice.com" target="_blank">cartivoice.com</a></span></div>
+			<div class="details-bar"><span>2019</span><span></span><span><a href="https://cartivoice.com">cartivoice.com</a></span></div>
 			<div class="window__pane">
 				<img src="img/logos/cartivoice.png" class="logo-img" alt="cartivoice">
 				<br> =======================
@@ -61,7 +60,7 @@
 				<h1 class="title">AMCO</h1>
 				<button class="resize"><span class="hidden">Resize</span></button>
 			</div>
-			<div class="details-bar"><span>2021</span><span></span><span><a href="https://amcosounds.com" target="_blank">amcosounds.com</a></span></div>
+			<div class="details-bar"><span>2021</span><span></span><span><a href="https://amcosounds.com">amcosounds.com</a></span></div>
 			<div class="window__pane">
 				<img src="img/logos/amco.png" class="logo-img" alt="AMCO">
 				<br>=======================
@@ -76,7 +75,7 @@
 				<h1 class="title">This Show Rules</h1>
 				<button class="resize"><span class="hidden">Resize</span></button>
 			</div>
-			<div class="details-bar"><span>2019</span><span></span><span><a href="https://thisshowrules.com" target="_blank">thisshowrules.com</a></span></div>
+			<div class="details-bar"><span>2019</span><span></span><span><a href="https://thisshowrules.com">thisshowrules.com</a></span></div>
 			<div class="window__pane">
 				<img src="img/logos/thisshowrules.png" class="logo-img" alt="This Show Rules">
 				<br>=======================
