--- a/MACSITE_nondynamic/index.html
+++ b/MACSITE_nondynamic/index.html
@@ -2,7 +2,6 @@
 <html lang="en" >
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>lance encarnado</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 	<link rel="stylesheet" href="css/style.css">
@@ -55,9 +54,7 @@
 		</div>
 	</div>
 	<!-- partial -->
-	<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-	<script src='https://unpkg.com/draggabilly@2/dist/draggabilly.pkgd.min.js'></script>
-	<script src="./script.js"></script>
+	<script src='https://unpkg.com/draggabilly@2/dist/draggabilly.pkgd.min.js'></script><script  src="./script.js"></script>
 
 </body>
 </html>
