--- a/MACSITE/index.html
+++ b/MACSITE/index.html
@@ -51,8 +51,8 @@
 			<div class="window__pane icon_window_pane">
 				<div class="desktop-icons window-icons">
 					<div class="icon disk" data-window="cartivoice" data-is-open=false><img src="img/icons/cartivoice.png" alt="cartivoice"><span class="icon-label">cartivoice</span></div>
-					<div class="icon disk" data-window="amco" data-is-open=false><span class="icon-label">AMCO</span></div>
-					<div class="icon disk" data-window="thisshowrules" data-is-open=false><span class="icon-label">This Show Rules</span></div>
+					<div class="icon disk" data-window="amco" data-is-open=false><img src="img/icons/amco.png" alt="AMCO"><span class="icon-label">AMCO</span></div>
+					<div class="icon disk" data-window="thisshowrules" data-is-open=false><img src="img/icons/thisshowrules.png" alt="This Show Rules"><span class="icon-label">This Show Rules</span></div>
 				</div>
 			</div>
 		</div>
