--- a/MACSITE/index.html
+++ b/MACSITE/index.html
@@ -8,13 +8,14 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body onload="time()">
 	<!-- <div class="crt menu-bar"> -->
 	<div class="menu-bar">
 		<ul class="menu-items">
 			<li class="apple">lance encarnado // </li>
 			<li><a href="index.html">Home</a></li>
 			<li>Contact</li>
+			<li id="menu-time"></li>
 		</ul>
 	</div>
 	<!-- <div class="crt desktop"> -->
@@ -51,8 +52,9 @@
 			<div class="window__pane icon_window_pane">
 				<div class="desktop-icons window-icons">
 					<div class="icon disk" data-window="cartivoice" data-is-open=false><img src="img/icons/cartivoice.png" alt="cartivoice"><span class="icon-label">cartivoice</span></div>
-					<div class="icon disk" data-window="amco" data-is-open=false><img src="img/icons/amco.png" alt="AMCO"><span class="icon-label">AMCO</span></div>
 					<div class="icon disk" data-window="thisshowrules" data-is-open=false><img src="img/icons/thisshowrules.png" alt="This Show Rules"><span class="icon-label">This Show Rules</span></div>
+					<div class="icon disk" data-window="amco" data-is-open=false><img src="img/icons/amco.png" alt="AMCO"><span class="icon-label">AMCO</span></div>
+					<div class="icon disk" data-window="hoodbabysurf" data-is-open=false><img src="img/icons/hoodbabysurf.png" alt="#HoodBabySurf"><span class="icon-label">#HoodBabySurf</span></div>
 				</div>
 			</div>
 		</div>
@@ -74,21 +76,6 @@
 			</div>
 		</div>
 
-		<div class="window" id="amco" data-is-open=false>
-			<div class="title-bar">
-				<button class="close"><span class="hidden">Close</span></button>
-				<h1 class="title">AMCO</h1>
-				<button class="resize"><span class="hidden">Resize</span></button>
-			</div>
-			<div class="details-bar"><span>2021</span><span></span><span><a href="https://amcosounds.com" target="_blank">amcosounds.com</a></span></div>
-			<div class="window__pane">
-				<img src="img/logos/amco.png" class="logo-img" alt="AMCO">
-				<br>=======================
-				<p><strong>Role</strong>: Coding
-				<p><strong>AMCO</strong> is a distribution, publishing and management company founded by the team behind the renowned independent music collective Awful Records, known for artists such as Father, Playboi Carti, Zack Fox, and Faye Webster, amongst others.
-			</div>
-		</div>
-
 		<div class="window" id="thisshowrules" data-is-open=false>
 			<div class="title-bar">
 				<button class="close"><span class="hidden">Close</span></button>
@@ -102,6 +89,43 @@
 				<p><strong>Role</strong>: Concept, design, coding
 				<p><strong>This Show Rules</strong> is a soundboard based on clips from <i>Time Crisis</i>, an Apple Music 1 radio show hosted by Vampire Weekend frontman Ezra Koenig & American painter Jake Longstreth.
 				<p>Users can click on the different squares to play iconic “drops” from the show, including “8 Minute Cape Cod” and “Corporate Food History,” as well as classic quotes.
+			</div>
+		</div>
+
+		<div class="window" id="amco" data-is-open=false>
+			<div class="title-bar">
+				<button class="close"><span class="hidden">Close</span></button>
+				<h1 class="title">AMCO</h1>
+				<button class="resize"><span class="hidden">Resize</span></button>
+			</div>
+			<div class="details-bar"><span>2021</span><span></span><span><a href="https://amcosounds.com" target="_blank">amcosounds.com</a></span></div>
+			<div class="window__pane">
+				<img src="img/logos/amco.png" class="logo-img" alt="AMCO">
+				<br>=======================
+				<p><strong>Role</strong>: Coding
+				<p><strong>Client</strong>: AMCO
+				<p><strong>AMCO</strong> is a distribution, publishing and management company founded by the team behind the renowned independent music collective Awful Records, known for artists such as Father, Playboi Carti, Zack Fox, and Faye Webster, amongst others.
+			</div>
+		</div>
+
+		<div class="window" id="hoodbabysurf" data-is-open=false>
+			<div class="title-bar">
+				<button class="close"><span class="hidden">Close</span></button>
+				<h1 class="title">#HoodBabySurf</h1>
+				<button class="resize"><span class="hidden">Resize</span></button>
+			</div>
+			<div class="details-bar"><span>2019</span><span></span><span><a href="https://apps.apple.com/us/app/hoodbabysurf/id1469347552" target="_blank">Download on iOS App Store</a></span></div>
+			<div class="window__pane">
+				<img src="img/logos/hoodbabysurf.png" class="logo-img" alt="#HoodBabySurf">
+				<br>=======================
+				<p><strong>Role</strong>: iOS development, distribution
+				<p><strong>Client</strong>: Alamo Records
+				<p><strong>#HoodBabySurf</strong> is an iOS game where the player controls rapper Lil Gotit as he surfs the seas saving mermaids and collecting powerups.
+				<p>The game features a soundtrack comprised of Lil Gotit's biggest hits, and is often updated to promote his new album and single releases. An iMessage sticker pack with Lil Gotit-related illustrations is included with the app.
+				<p><img class="screenshot-img" src="img/screenshots/hoodbabysurf-1.png" alt="#HoodBabySurf screenshot">
+				<p><img class="screenshot-img" src="img/screenshots/hoodbabysurf-2.png" alt="#HoodBabySurf screenshot">
+				<p><img class="screenshot-img" src="img/screenshots/hoodbabysurf-3.png" alt="#HoodBabySurf screenshot">
+				<p><img class="screenshot-img" src="img/screenshots/hoodbabysurf-4.jpg" alt="#HoodBabySurf screenshot">
 			</div>
 		</div>
 	</div>
