added meetmeatthelondon + mirror of site

--- a/MACSITE/index.html
+++ b/MACSITE/index.html
@@ -12,9 +12,9 @@
 	<!-- <div class="crt menu-bar"> -->
 	<div class="menu-bar">
 		<ul class="menu-items">
-			<li class="apple">lance encarnado // </li>
-			<li><a href="index.html">Home</a></li>
-			<li>Contact</li>
+			<li class="apple"><a href="index.html">lance encarnado</a></li>
+			<!-- <li><a href="index.html">Home</a></li>
+			<li>Contact</li> -->
 			<li id="menu-time"></li>
 		</ul>
 	</div>
@@ -48,13 +48,14 @@
 				<h1 class="title">Work</h1>
 				<button class="resize"><span class="hidden">Resize</span></button>
 			</div>
-			<div class="details-bar"><span>3 items</span><span>1,227K in disk</span><span>189K available</span></div>
+			<div class="details-bar"><span>5 items</span><span>1,227K in disk</span><span>189K available</span></div>
 			<div class="window__pane icon_window_pane">
 				<div class="desktop-icons window-icons">
 					<div class="icon disk" data-window="cartivoice" data-is-open=false><img src="img/icons/cartivoice.png" alt="cartivoice"><span class="icon-label">cartivoice</span></div>
 					<div class="icon disk" data-window="thisshowrules" data-is-open=false><img src="img/icons/thisshowrules.png" alt="This Show Rules"><span class="icon-label">This Show Rules</span></div>
 					<div class="icon disk" data-window="amco" data-is-open=false><img src="img/icons/amco.png" alt="AMCO"><span class="icon-label">AMCO</span></div>
 					<div class="icon disk" data-window="hoodbabysurf" data-is-open=false><img src="img/icons/hoodbabysurf.png" alt="#HoodBabySurf"><span class="icon-label">#HoodBabySurf</span></div>
+					<div class="icon disk" data-window="meetmeatthelondon" data-is-open=false><img src="img/icons/meetmeatthelondon1.png" alt="#MeetMeAtTheLondon"><span class="icon-label">#TheLondon</span></div>
 				</div>
 			</div>
 		</div>
@@ -114,7 +115,7 @@
 				<h1 class="title">#HoodBabySurf</h1>
 				<button class="resize"><span class="hidden">Resize</span></button>
 			</div>
-			<div class="details-bar"><span>2019</span><span></span><span><a href="https://apps.apple.com/us/app/hoodbabysurf/id1469347552" target="_blank">Download on iOS App Store</a></span></div>
+			<div class="details-bar"><span>2019</span><span></span><span><a href="https://apps.apple.com/us/app/hoodbabysurf/id1469347552" target="_blank">Download (iOS App Store)</a></span></div>
 			<div class="window__pane">
 				<img src="img/logos/hoodbabysurf.png" class="logo-img" alt="#HoodBabySurf">
 				<br>=======================
@@ -126,6 +127,23 @@
 				<p><img class="screenshot-img" src="img/screenshots/hoodbabysurf-2.png" alt="#HoodBabySurf screenshot">
 				<p><img class="screenshot-img" src="img/screenshots/hoodbabysurf-3.png" alt="#HoodBabySurf screenshot">
 				<p><img class="screenshot-img" src="img/screenshots/hoodbabysurf-4.jpg" alt="#HoodBabySurf screenshot">
+			</div>
+		</div>
+
+		<div class="window" id="meetmeatthelondon" data-is-open=false>
+			<div class="title-bar">
+				<button class="close"><span class="hidden">Close</span></button>
+				<h1 class="title">#MeetMeAtTheLondon</h1>
+				<button class="resize"><span class="hidden">Resize</span></button>
+			</div>
+			<div class="details-bar"><span>2019</span><span></span><span><a href="work/meetmeatthelondon/index.html" target="_blank">meetmeatthelondon.com (Mirror)</a></span></div>
+			<div class="window__pane">
+				<img src="img/logos/meetmeatthelondon.png" class="logo-img" alt="#MeetMeAtTheLondon">
+				<br>=======================
+				<p><strong>Role</strong>: Coding
+				<p><strong>Client</strong>: 300 Entertainment / YSL Records
+				<p><strong>#MeetMeAtTheLondon</strong> was a meme generator where users could upload a photo of their face and insert it into a cutout of Young Thug.
+				<p>The site was commissioned as a digital activation to promote Young Thug’s 2019 single “The London” featuring Travis Scott & J. Cole, which peaked at #12 on the Billboard Hot 100 and was certified 3x Platinum.
 			</div>
 		</div>
 	</div>
