sum new work added

--- a/MACSITE/index.html
+++ b/MACSITE/index.html
@@ -23,6 +23,7 @@
 		<div class="desktop-icons">
 			<div class="icon disk" data-window="twitter" data-is-open="false"><img src="img/icons/twitter.png" alt="Twitter"><span class="icon-label">Twitter</span></div>
 			<div class="icon disk" data-window="work" data-is-open="false"><img src="img/icons/folder.png" alt="Work"><span class="icon-label">Work</span></div>
+			<div class="icon disk" id="contact"><a href="mailto:lance.encarnado@gmail.com"><img src="img/icons/contact.png" alt="Work"><span class="icon-label">Contact</span></a></div>
 		</div>
 
 		<div class="window" id="twitter" data-is-open="false">
@@ -51,11 +52,14 @@
 			<div class="details-bar"><span>5 items</span><span>1,227K in disk</span><span>189K available</span></div>
 			<div class="window__pane icon_window_pane">
 				<div class="desktop-icons window-icons">
-					<div class="icon disk" data-window="cartivoice" data-is-open=false><img src="img/icons/cartivoice.png" alt="cartivoice"><span class="icon-label">cartivoice</span></div>
-					<div class="icon disk" data-window="thisshowrules" data-is-open=false><img src="img/icons/thisshowrules.png" alt="This Show Rules"><span class="icon-label">This Show Rules</span></div>
+					<div class="icon disk" data-window="cartivoice" data-is-open=false><img src="img/icons/cartivoice.png" alt="cartivoice"><span class="icon-label">carti voice</span></div>
+					<div class="icon disk" data-window="thisshowrules" data-is-open=false><img src="img/icons/thisshowrules.png" alt="This Show Rules"><span class="icon-label">This Show<br>Rules</span></div>
 					<div class="icon disk" data-window="amco" data-is-open=false><img src="img/icons/amco.png" alt="AMCO"><span class="icon-label">AMCO</span></div>
 					<div class="icon disk" data-window="hoodbabysurf" data-is-open=false><img src="img/icons/hoodbabysurf.png" alt="#HoodBabySurf"><span class="icon-label">#HoodBabySurf</span></div>
-					<div class="icon disk" data-window="meetmeatthelondon" data-is-open=false><img src="img/icons/meetmeatthelondon1.png" alt="#MeetMeAtTheLondon"><span class="icon-label">#TheLondon</span></div>
+					<div class="icon disk" data-window="yachtclub" data-is-open=false><img src="img/icons/yachtclub.png" alt="Yacht Club: Wave Runna"><span class="icon-label">Yacht Club</span></div>
+					<div class="icon disk" data-window="trappedoncleveland" data-is-open=false><img src="img/icons/trappedoncleveland.png" alt="Trapped On Cleveland"><span class="icon-label">Trapped on<br>Cleveland</span></div>
+					<div class="icon disk" data-window="meetmeatthelondon" data-is-open=false><img src="img/icons/meetmeatthelondon1.png" alt="#MeetMeAtTheLondon"><span class="icon-label">#MeetMeAt<br>TheLondon</span></div>
+					<div class="icon disk" data-window="lildurknickname" data-is-open=false><img src="img/icons/lildurknickname.png" alt="Lil Durk Nickname Generator"><span class="icon-label">Lil Durk <br>Nickname</span></div>
 				</div>
 			</div>
 		</div>
@@ -63,17 +67,20 @@
 		<div class="window" id="cartivoice" data-is-open=false>
 			<div class="title-bar">
 				<button class="close"><span class="hidden">Close</span></button>
-				<h1 class="title">cartivoice</h1>
+				<h1 class="title">carti voice</h1>
 				<button class="resize"><span class="hidden">Resize</span></button>
 			</div>
 			<div class="details-bar"><span>2019</span><span></span><span><a href="https://cartivoice.com" target="_blank">cartivoice.com</a></span></div>
 			<div class="window__pane">
-				<img src="img/logos/cartivoice.png" class="logo-img" alt="cartivoice">
+				<img src="img/logos/cartivoice.png" class="logo-img" alt="carti voice">
 				<br> =======================
 				<p><strong>Role</strong>: Concept, design, coding
 				<p><strong>carti voice</strong> is a meme generator that takes user-input text and translates it into the unique typing style of rapper Playboi Carti.
 				<p>I came up with the idea one day in March of 2019, and four days later, <a href="https://twitter.com/LScorrcho/status/1107341327182651394" data-type="URL" data-id="https://twitter.com/LScorrcho/status/1107341327182651394">the site was live.</a> It went viral immediately after release, with thousands of Carti fans using the site to create tweets and Instagram captions. The site still receives thousands of page views weekly.
-				<p><img class="screenshot-img" src="img/screenshots/cartivoice.png" alt="cartivoice">
+				<p><img class="screenshot-img" src="img/screenshots/cartivoice.png" alt="carti voice screenshot">
+				<p><img class="screenshot-img" src="img/screenshots/cartivoice2.png" alt="carti voice screenshot">
+				<p><img class="screenshot-img" src="img/screenshots/cartivoice3.png" alt="carti voice screenshot">
+				<p><img class="screenshot-img" src="img/screenshots/cartivoice4.png" alt="carti voice screenshot">
 			</div>
 		</div>
 
@@ -90,6 +97,8 @@
 				<p><strong>Role</strong>: Concept, design, coding
 				<p><strong>This Show Rules</strong> is a soundboard based on clips from <i>Time Crisis</i>, an Apple Music 1 radio show hosted by Vampire Weekend frontman Ezra Koenig & American painter Jake Longstreth.
 				<p>Users can click on the different squares to play iconic “drops” from the show, including “8 Minute Cape Cod” and “Corporate Food History,” as well as classic quotes.
+				<p><img class="screenshot-img" src="img/screenshots/thisshowrules1.png" alt="This Show Rules screenshot">
+				<p><img class="screenshot-img" src="img/screenshots/thisshowrules2.png" alt="This Show Rules screenshot">
 			</div>
 		</div>
 
@@ -106,6 +115,8 @@
 				<p><strong>Role</strong>: Coding
 				<p><strong>Client</strong>: AMCO
 				<p><strong>AMCO</strong> is a distribution, publishing and management company founded by the team behind the renowned independent music collective Awful Records, known for artists such as Father, Playboi Carti, Zack Fox, and Faye Webster, amongst others.
+				<p><img class="screenshot-img" src="img/screenshots/amco1.jpg" alt="AMCO screenshot">
+				<p><img class="screenshot-img" src="img/screenshots/amco2.jpg" alt="AMCO screenshot">
 			</div>
 		</div>
 
@@ -130,6 +141,42 @@
 			</div>
 		</div>
 
+		<div class="window" id="yachtclub" data-is-open=false>
+			<div class="title-bar">
+				<button class="close"><span class="hidden">Close</span></button>
+				<h1 class="title">Yacht Club: Wave Runna</h1>
+				<button class="resize"><span class="hidden">Resize</span></button>
+			</div>
+			<div class="details-bar"><span>2020</span><span></span><span><a href="https://apps.apple.com/ca/app/yacht-club-wave-runna/id1471445776" target="_blank">Download (iOS App Store)</a></span></div>
+			<div class="window__pane">
+				<img src="img/logos/yachtclub.png" class="logo-img" alt="Yacht Club: Wave Runna">
+				<br>=======================
+				<p><strong>Role</strong>: iOS development, distribution
+				<p><strong>Client</strong>: 300 Entertainment / YSL Records
+				<p><strong>Yacht Club: Wave Runna</strong> is an iOS game featuring rapper Strick and friends as they ride jetskis, doing stunts and collecting nitros to beat the clock and obtain the highest score possible.
+				<p>The app was commissioned to promote Strick’s 2020 single “Yacht Club” featuring Young Thug and Ty Dolla $ign.
+				<p><img class="screenshot-img" src="img/screenshots/yachtclub1.jpg" alt="Yacht Club: Wave Runna screenshot">
+				<p><img class="screenshot-img" src="img/screenshots/yachtclub2.jpg" alt="Yacht Club: Wave Runna screenshot">
+				<p><img class="screenshot-img" src="img/screenshots/yachtclub3.jpg" alt="Yacht Club: Wave Runna screenshot">
+			</div>
+		</div>
+
+		<div class="window" id="trappedoncleveland" data-is-open=false>
+			<div class="title-bar">
+				<button class="close"><span class="hidden">Close</span></button>
+				<h1 class="title">Trapped On Cleveland</h1>
+				<button class="resize"><span class="hidden">Resize</span></button>
+			</div>
+			<div class="details-bar"><span>2020</span><span></span><span><a href="https://apps.apple.com/us/app/trapped-on-cleveland/id1527010393" target="_blank">Download (iOS App Store)</a></span></div>
+			<div class="window__pane">
+				<img src="img/logos/trappedoncleveland.png" class="logo-img" alt="Trapped On Cleveland">
+				<br>=======================
+				<p><strong>Role</strong>: iOS development, distribution
+				<p><strong>Client</strong>: 300 Entertainment / YSL Records
+				<p><strong>Trapped On Cleveland</strong>
+			</div>
+		</div>
+
 		<div class="window" id="meetmeatthelondon" data-is-open=false>
 			<div class="title-bar">
 				<button class="close"><span class="hidden">Close</span></button>
@@ -142,8 +189,29 @@
 				<br>=======================
 				<p><strong>Role</strong>: Coding
 				<p><strong>Client</strong>: 300 Entertainment / YSL Records
-				<p><strong>#MeetMeAtTheLondon</strong> was a meme generator where users could upload a photo of their face and insert it into a cutout of Young Thug.
-				<p>The site was commissioned as a digital activation to promote Young Thug’s 2019 single “The London” featuring Travis Scott & J. Cole, which peaked at #12 on the Billboard Hot 100 and was certified 3x Platinum.
+				<p><strong>#MeetMeAtTheLondon</strong> is a meme generator where users can upload a photo of their face and insert it into a cutout of Young Thug.
+				<p>The site was commissioned as a digital activation to promote Young Thug’s 2019 single “The London” featuring Travis Scott & J. Cole, which peaked at #12 on the Billboard Hot 100 and is certified 3x Platinum.
+				<p><img class="screenshot-img" src="img/screenshots/meetmeatthelondon.jpg" alt="#MeetMeAtTheLondon screenshot">
+				<p><img class="screenshot-img" src="img/screenshots/meetmeatthelondon2.jpg" alt="#MeetMeAtTheLondon screenshot">
+			</div>
+		</div>
+
+		<div class="window" id="lildurknickname" data-is-open=false>
+			<div class="title-bar">
+				<button class="close"><span class="hidden">Close</span></button>
+				<h1 class="title">Lil Durk Nickname Generator</h1>
+				<button class="resize"><span class="hidden">Resize</span></button>
+			</div>
+			<div class="details-bar"><span>2021</span><span></span><span><a href="https://lildurknickname.com/" target="_blank">lildurknickname.com</a></span></div>
+			<div class="window__pane">
+				<img src="img/logos/lildurknickname.png" class="logo-img" alt="Lil Durk Nickname Generator">
+				<br>=======================
+				<p><strong>Role</strong>: Coding
+				<p><strong>Client</strong>: Alamo Records
+				<p><strong>Lil Durk Nickname Generator</strong>
+				<p><img class="screenshot-img" src="img/screenshots/lildurknickname1.png" alt="Lil Durk Nickname Generator screenshot">
+				<p><img class="screenshot-img" src="img/screenshots/lildurknickname2.png" alt="Lil Durk Nickname Generator screenshot">
+				<p><img class="screenshot-img" src="img/screenshots/lildurknickname3.png" alt="Lil Durk Nickname Generator screenshot">
 			</div>
 		</div>
 	</div>
