--- a/tcsoundboard/index.html
+++ b/tcsoundboard/index.html
@@ -26,7 +26,7 @@ your dad took the bread and he like, absconded man
 
 <body ontouchstart="">
 	<div class="borderdiv">
-		<div class="logodiv"><img class="logoimg" src="assets/logo_masks2.png" alt="This Show Rules - Time Crisis Soundboard"></div>
+		<div class="logodiv"><img class="logoimg" src="assets/logo.png" alt="This Show Rules - Time Crisis Soundboard"></div>
 		<div id="soundboard"></div>
 		<div class="footerdiv">
 			THIS SHOW RULES - A TIME CRISIS SOUNDBOARD // BY <a href="https://twitter.com/LScorrcho">@LSCORRCHO</a>
