--- a/MACSITE/index.html
+++ b/MACSITE/index.html
@@ -132,7 +132,7 @@
 				<br>=======================
 				<p><strong>Role</strong>: iOS development, distribution
 				<p><strong>Client</strong>: Alamo Records
-				<p><strong>#HoodBabySurf</strong> is an iOS game where the player controls rapper Lil Gotit as he surfs the seas saving mermaids and collecting powerups.
+				<p><strong>#HoodBabySurf</strong> is an iOS game in which the player controls rapper Lil Gotit as he surfs the seas saving mermaids and collecting powerups.
 				<p>The game features a soundtrack comprised of Lil Gotit's biggest hits, and is often updated to promote his new album and single releases. An iMessage sticker pack with Lil Gotit-related illustrations is included with the app.
 				<p><img class="screenshot-img" src="img/screenshots/hoodbabysurf-1.png" alt="#HoodBabySurf screenshot">
 				<p><img class="screenshot-img" src="img/screenshots/hoodbabysurf-2.png" alt="#HoodBabySurf screenshot">
@@ -153,7 +153,7 @@
 				<br>=======================
 				<p><strong>Role</strong>: iOS development, distribution
 				<p><strong>Client</strong>: 300 Entertainment / YSL Records
-				<p><strong>Yacht Club: Wave Runna</strong> is an iOS game featuring rapper Strick and friends as they ride jetskis, doing stunts and collecting nitros to beat the clock and obtain the highest score possible.
+				<p><strong>Yacht Club: Wave Runna</strong> is an iOS game in which the player controls rapper Strick and friends as they ride jetskis, doing stunts and collecting nitros to beat the clock and obtain the highest score possible.
 				<p>The app was commissioned to promote Strick’s 2020 single “Yacht Club” featuring Young Thug and Ty Dolla $ign.
 				<p><img class="screenshot-img" src="img/screenshots/yachtclub1.jpg" alt="Yacht Club: Wave Runna screenshot">
 				<p><img class="screenshot-img" src="img/screenshots/yachtclub2.jpg" alt="Yacht Club: Wave Runna screenshot">
