logos leads to sites, added more work

--- a/MACSITE/index.html
+++ b/MACSITE/index.html
@@ -49,17 +49,18 @@
 				<h1 class="title">Work</h1>
 				<button class="resize"><span class="hidden">Resize</span></button>
 			</div>
-			<div class="details-bar"><span>5 items</span><span>1,227K in disk</span><span>189K available</span></div>
+			<div class="details-bar"><span>8 items</span><span>1,227K in disk</span><span>189K available</span></div>
 			<div class="window__pane icon_window_pane">
 				<div class="desktop-icons window-icons">
 					<div class="icon disk" data-window="cartivoice" data-is-open=false><img src="img/icons/cartivoice.png" alt="cartivoice"><span class="icon-label">carti voice</span></div>
 					<div class="icon disk" data-window="thisshowrules" data-is-open=false><img src="img/icons/thisshowrules.png" alt="This Show Rules"><span class="icon-label">This Show<br>Rules</span></div>
 					<div class="icon disk" data-window="amco" data-is-open=false><img src="img/icons/amco.png" alt="AMCO"><span class="icon-label">AMCO</span></div>
-					<div class="icon disk" data-window="hoodbabysurf" data-is-open=false><img src="img/icons/hoodbabysurf.png" alt="#HoodBabySurf"><span class="icon-label">#HoodBabySurf</span></div>
+					<div class="icon disk" data-window="hoodbabysurf" data-is-open=false><img src="img/icons/hoodbabysurf2.png" alt="#HoodBabySurf"><span class="icon-label">#HoodBabySurf</span></div>
 					<div class="icon disk" data-window="yachtclub" data-is-open=false><img src="img/icons/yachtclub.png" alt="Yacht Club: Wave Runna"><span class="icon-label">Yacht Club</span></div>
 					<div class="icon disk" data-window="trappedoncleveland" data-is-open=false><img src="img/icons/trappedoncleveland.png" alt="Trapped On Cleveland"><span class="icon-label">Trapped on<br>Cleveland</span></div>
 					<div class="icon disk" data-window="meetmeatthelondon" data-is-open=false><img src="img/icons/meetmeatthelondon1.png" alt="#MeetMeAtTheLondon"><span class="icon-label">#MeetMeAt<br>TheLondon</span></div>
 					<div class="icon disk" data-window="lildurknickname" data-is-open=false><img src="img/icons/lildurknickname.png" alt="Lil Durk Nickname Generator"><span class="icon-label">Lil Durk <br>Nickname</span></div>
+					<div class="icon disk" data-window="rags2riches" data-is-open=false><img src="img/icons/rags2riches.png" alt="Rags2Riches"><span class="icon-label">Rags2Riches</span></div>
 				</div>
 			</div>
 		</div>
@@ -72,7 +73,7 @@
 			</div>
 			<div class="details-bar"><span>2019</span><span></span><span><a href="https://cartivoice.com" target="_blank">cartivoice.com</a></span></div>
 			<div class="window__pane">
-				<img src="img/logos/cartivoice.png" class="logo-img" alt="carti voice">
+				<a href="https://cartivoice.com" target="_blank"><img src="img/logos/cartivoice.png" class="logo-img" alt="carti voice"></a>
 				<br> =======================
 				<p><strong>Role</strong>: Concept, design, coding
 				<p><strong>carti voice</strong> is a meme generator that takes user-input text and translates it into the unique typing style of rapper Playboi Carti.
@@ -92,7 +93,7 @@
 			</div>
 			<div class="details-bar"><span>2019</span><span></span><span><a href="https://thisshowrules.com" target="_blank">thisshowrules.com</a></span></div>
 			<div class="window__pane">
-				<img src="img/logos/thisshowrules.png" class="logo-img" alt="This Show Rules">
+				<a href="https://thisshowrules.com" target="_blank"><img src="img/logos/thisshowrules.png" class="logo-img" alt="This Show Rules"></a>
 				<br>=======================
 				<p><strong>Role</strong>: Concept, design, coding
 				<p><strong>This Show Rules</strong> is a soundboard based on clips from <i>Time Crisis</i>, an Apple Music 1 radio show hosted by Vampire Weekend frontman Ezra Koenig & American painter Jake Longstreth.
@@ -110,7 +111,7 @@
 			</div>
 			<div class="details-bar"><span>2021</span><span></span><span><a href="https://amcosounds.com" target="_blank">amcosounds.com</a></span></div>
 			<div class="window__pane">
-				<img src="img/logos/amco.png" class="logo-img" alt="AMCO">
+				<a href="https://amcosounds.com" target="_blank"><img src="img/logos/amco.png" class="logo-img" alt="AMCO"></a>
 				<br>=======================
 				<p><strong>Role</strong>: Coding
 				<p><strong>Client</strong>: AMCO
@@ -128,7 +129,7 @@
 			</div>
 			<div class="details-bar"><span>2019</span><span></span><span><a href="https://apps.apple.com/us/app/hoodbabysurf/id1469347552" target="_blank">Download (iOS App Store)</a></span></div>
 			<div class="window__pane">
-				<img src="img/logos/hoodbabysurf.png" class="logo-img" alt="#HoodBabySurf">
+				<a href="https://apps.apple.com/us/app/hoodbabysurf/id1469347552" target="_blank"><img src="img/logos/hoodbabysurf.png" class="logo-img" alt="#HoodBabySurf"></a>
 				<br>=======================
 				<p><strong>Role</strong>: iOS development, distribution
 				<p><strong>Client</strong>: Alamo Records
@@ -149,7 +150,7 @@
 			</div>
 			<div class="details-bar"><span>2020</span><span></span><span><a href="https://apps.apple.com/ca/app/yacht-club-wave-runna/id1471445776" target="_blank">Download (iOS App Store)</a></span></div>
 			<div class="window__pane">
-				<img src="img/logos/yachtclub.png" class="logo-img" alt="Yacht Club: Wave Runna">
+				<a href="https://apps.apple.com/ca/app/yacht-club-wave-runna/id1471445776" target="_blank"><img src="img/logos/yachtclub.png" class="logo-img" alt="Yacht Club: Wave Runna"></a>
 				<br>=======================
 				<p><strong>Role</strong>: iOS development, distribution
 				<p><strong>Client</strong>: 300 Entertainment / YSL Records
@@ -169,11 +170,16 @@
 			</div>
 			<div class="details-bar"><span>2020</span><span></span><span><a href="https://apps.apple.com/us/app/trapped-on-cleveland/id1527010393" target="_blank">Download (iOS App Store)</a></span></div>
 			<div class="window__pane">
-				<img src="img/logos/trappedoncleveland.png" class="logo-img" alt="Trapped On Cleveland">
+				<a href="https://apps.apple.com/us/app/trapped-on-cleveland/id1527010393" target="_blank"><img src="img/logos/trappedoncleveland.png" class="logo-img" alt="Trapped On Cleveland"></a>
 				<br>=======================
 				<p><strong>Role</strong>: iOS development, distribution
 				<p><strong>Client</strong>: 300 Entertainment / YSL Records
-				<p><strong>Trapped On Cleveland</strong>
+				<p><strong>Trapped On Cleveland</strong> is a Friday the 13th-inspired iOS game in which the player controls rapper Lil Keed as he fights off hordes of zombies using a chainsaws, shotguns, and dynamite.
+				<p>The app was commisioned to promote Lil Keed's 2020 mixtape "Trapped On Cleveland 3," and the game features songs from that mixtape as well as some of his other hits.
+				<p><img class="screenshot-img" src="img/screenshots/trappedoncleveland1.jpg" alt="Trapped On Cleveland screenshot">
+				<p><img class="screenshot-img" src="img/screenshots/trappedoncleveland2.jpg" alt="Trapped On Cleveland screenshot">
+				<p><img class="screenshot-img" src="img/screenshots/trappedoncleveland3.jpg" alt="Trapped On Cleveland screenshot">
+				<p><img class="screenshot-img" src="img/screenshots/trappedoncleveland4.jpg" alt="Trapped On Cleveland screenshot">
 			</div>
 		</div>
 
@@ -185,7 +191,7 @@
 			</div>
 			<div class="details-bar"><span>2019</span><span></span><span><a href="work/meetmeatthelondon/index.html" target="_blank">meetmeatthelondon.com (Mirror)</a></span></div>
 			<div class="window__pane">
-				<img src="img/logos/meetmeatthelondon.png" class="logo-img" alt="#MeetMeAtTheLondon">
+				<a href="work/meetmeatthelondon/index.html" target="_blank"><img src="img/logos/meetmeatthelondon.png" class="logo-img" alt="#MeetMeAtTheLondon"></a>
 				<br>=======================
 				<p><strong>Role</strong>: Coding
 				<p><strong>Client</strong>: 300 Entertainment / YSL Records
@@ -204,7 +210,7 @@
 			</div>
 			<div class="details-bar"><span>2021</span><span></span><span><a href="https://lildurknickname.com/" target="_blank">lildurknickname.com</a></span></div>
 			<div class="window__pane">
-				<img src="img/logos/lildurknickname.png" class="logo-img" alt="Lil Durk Nickname Generator">
+				<a href="https://lildurknickname.com/" target="_blank">l<img src="img/logos/lildurknickname.png" class="logo-img" alt="Lil Durk Nickname Generator"></a>
 				<br>=======================
 				<p><strong>Role</strong>: Coding
 				<p><strong>Client</strong>: Alamo Records
@@ -214,8 +220,26 @@
 				<p><img class="screenshot-img" src="img/screenshots/lildurknickname3.png" alt="Lil Durk Nickname Generator screenshot">
 			</div>
 		</div>
+
+		<div class="window" id="rags2riches" data-is-open=false>
+			<div class="title-bar">
+				<button class="close"><span class="hidden">Close</span></button>
+				<h1 class="title">Rags2Riches</h1>
+				<button class="resize"><span class="hidden">Resize</span></button>
+			</div>
+			<div class="details-bar"><span>2020</span><span></span><span><a href="https://rags-2-riches.com/" target="_blank">rags-2-riches.com</a></span></div>
+			<div class="window__pane">
+				<a href="https://rags-2-riches.com/" target="_blank"><img src="img/logos/rags2riches.png" class="logo-img" alt="Rags2Riches"></a>
+				<br>=======================
+				<p><strong>Role</strong>: Coding
+				<p><strong>Client</strong>: Alamo Records
+				<p><strong>Rags2Riches</strong> is a meme generator where users can upload photos of themselves to create their own custom Rod Wave $100 bill, with their picture being the presidential portrait in the middle.
+				<p>This digital activation was created to promote the deluxe edition of Rod Wave’s album Pray 4 Love. The site itself is inspired by Rod Wave’s viral TikTok song “Rags2Riches.”
+			</div>
+		</div>
+
 	</div>
-	<!-- partial -->
+
 	<script src='https://unpkg.com/draggabilly@2/dist/draggabilly.pkgd.min.js'></script><script  src="./script.js"></script>
 
 </body>
