added rags2riches mirror (og site down), tacklebox icon (no window yet)

--- a/MACSITE/index.html
+++ b/MACSITE/index.html
@@ -13,8 +13,14 @@
 	<div class="menu-bar">
 		<ul class="menu-items">
 			<li class="apple"><a href="index.html">lance encarnado</a></li>
-			<!-- <li><a href="index.html">Home</a></li>
-			<li>Contact</li> -->
+			<div class="dropdown">
+				<li class="dropdown-tab">File</li>
+				<div class="dropdown-content">
+				    <a href="#">Link 1</a>
+				    <a href="#">Link 2</a>
+				    <a href="#">Link 3</a>
+				</div>
+			</div>
 			<li id="menu-time"></li>
 		</ul>
 	</div>
@@ -49,9 +55,10 @@
 				<h1 class="title">Work</h1>
 				<button class="resize"><span class="hidden">Resize</span></button>
 			</div>
-			<div class="details-bar"><span>8 items</span><span>1,227K in disk</span><span>189K available</span></div>
+			<div class="details-bar"><span>10 items</span><span>1,227K in disk</span><span>189K available</span></div>
 			<div class="window__pane icon_window_pane">
 				<div class="desktop-icons window-icons">
+					<div class="icon disk" data-window="tacklebox" data-is-open=false><img src="img/icons/tacklebox.png" alt="Tacklebox"><span class="icon-label">Tacklebox</span></div>
 					<div class="icon disk" data-window="cartivoice" data-is-open=false><img src="img/icons/cartivoice.png" alt="cartivoice"><span class="icon-label">carti voice</span></div>
 					<div class="icon disk" data-window="thisshowrules" data-is-open=false><img src="img/icons/thisshowrules.png" alt="This Show Rules"><span class="icon-label">This Show<br>Rules</span></div>
 					<div class="icon disk" data-window="amco" data-is-open=false><img src="img/icons/amco.png" alt="AMCO"><span class="icon-label">AMCO</span></div>
@@ -189,7 +196,7 @@
 				<h1 class="title">#MeetMeAtTheLondon</h1>
 				<button class="resize"><span class="hidden">Resize</span></button>
 			</div>
-			<div class="details-bar"><span>2019</span><span></span><span><a href="work/meetmeatthelondon/index.html" target="_blank">meetmeatthelondon.com (Mirror)</a></span></div>
+			<div class="details-bar"><span>2019</span><span></span><span><a href="work/meetmeatthelondon/index.html" target="_blank">meetmeatthelondon.com (Archive)</a></span></div>
 			<div class="window__pane">
 				<a href="work/meetmeatthelondon/index.html" target="_blank"><img src="img/logos/meetmeatthelondon.png" class="logo-img" alt="#MeetMeAtTheLondon"></a>
 				<br>=======================
@@ -227,9 +234,9 @@
 				<h1 class="title">Rags2Riches</h1>
 				<button class="resize"><span class="hidden">Resize</span></button>
 			</div>
-			<div class="details-bar"><span>2020</span><span></span><span><a href="https://rags-2-riches.com/" target="_blank">rags-2-riches.com</a></span></div>
+			<div class="details-bar"><span>2020</span><span></span><span><a href="work/rags2riches/index.html" target="_blank">rags-2-riches.com (Archive)</a></span></div>
 			<div class="window__pane">
-				<a href="https://rags-2-riches.com/" target="_blank"><img src="img/logos/rags2riches.png" class="logo-img" alt="Rags2Riches"></a>
+				<a href="work/rags2riches/index.html" target="_blank"><img src="img/logos/rags2riches.png" class="logo-img" alt="Rags2Riches"></a>
 				<br>=======================
 				<p><strong>Role</strong>: Coding
 				<p><strong>Client</strong>: Alamo Records
@@ -237,10 +244,10 @@
 				<p>This digital activation was created to promote the deluxe edition of Rod Wave’s album Pray 4 Love. The site itself is inspired by Rod Wave’s viral TikTok song “Rags2Riches.”
 			</div>
 		</div>
-
 	</div>
 
 	<script src='https://unpkg.com/draggabilly@2/dist/draggabilly.pkgd.min.js'></script><script  src="./script.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 </body>
 </html>
